testdata/operators/fail/operator_overload3.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadFail/operator_overload3.pas
// Purpose: Test incomplete operator declaration (missing second parameter)
// Expected: Syntax error for missing closing parenthesis

operator + (TObject ;
